--- a/offer.html
+++ b/offer.html
@@ -17,7 +17,7 @@
      class="navbar navbar-expand-lg bg-body-tertiary fixed-top bg-opacity-50 navbar-collapse container rounded-5"
    >
      <div class="container fw-bold">
-       <a class="navbar-brand  fw-bold fs-3 nav-img ps-3" href="https://www.azhospital.sa/?lang=ar" target="_blank">مجمع الظافر </a>
+       <a class="navbar-brand  fw-bold fs-3 nav-img ps-3" href="#" target="_blank">مجمع الظافر </a>
        <button
          class="navbar-toggler"
          type="button"
